# monitor-switcher

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: app.manifest  app_icon_128.rgba  gen_icons.py  tray_icon_32.rgba
src/: app.rs  controller.rs  hotkeys.rs  main.rs  tray.rs
src/config/: mod.rs  schema.rs
src/gui/: hotkey_capture.rs  identify_overlay.rs  log_panel.rs  mod.rs  monitors_panel.rs  monitors_tab.rs  profiles_panel.rs  profiles_tab.rs  settings_panel.rs  shared.rs
src/platform/: mod.rs
src/platform/windows/: autostart.rs  ddc.rs  mod.rs  monitor_identity.rs  single_instance.rs
