[package]
name = "monitor-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
ddc-hi = { version = "=0.4.1", default-features = false, features = ["ddc-winapi"] }
mccs-db = "=0.1.3"
tray-icon = "=0.24.1"
global-hotkey = "=0.8.0"
eframe = "=0.35.0"
egui = "=0.35.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6.0.0"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }
# Queries root\wmi's WmiMonitorID class for real EDID-derived monitor info
# (manufacturer, friendly model name, serial, manufacture date) - ddc-winapi
# itself exposes none of this, only a generic OS-assigned description string.
wmi = "0.17"

[profile.release]
opt-level = 2
